make search, filter and pagination product
